Added ci_reporter gem to Gemfile
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1082454 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -39,6 +39,7 @@ group :test do
   gem "compass"
   gem "nokogiri"
   gem "rack-test"
+  gem "ci_reporter"
   gem "cucumber"
   gem "rcov"
   gem "rspec", "< 2.0.0" 
