--- a/server/Gemfile
+++ b/server/Gemfile
@@ -10,6 +10,8 @@ gem "thin"
 gem "rerun"
 gem "json"
 gem "net-ssh"
+# openssl gem is required by net-ssh and it's not pulled in automatically
+gem "openssl"
 
 group :linode do
   gem 'linode'
