Removed openssl (it's built in), added activesupport for AWS gem (Gemfile)
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1082513 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -10,14 +10,13 @@ gem "thin"
 gem "rerun"
 gem "json"
 gem "net-ssh"
-# openssl gem is required by net-ssh and it's not pulled in automatically
-gem "openssl"
 
 group :linode do
   gem 'linode'
 end
 
 group :amazon do
+  gem 'activesupport'
   gem 'aws'
 end
 
