Added i18n gem to Gemfile (activesupport dependency)
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1082517 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -44,4 +44,6 @@ group :test do
   gem "cucumber"
   gem "rcov"
   gem "rspec", "< 2.0.0" 
+  # This gem is needed by activesupport (aws)
+  gem "i18n"
 end
