Eucalyptus driver support
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1085576 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/config/drivers.yaml
+++ b/server/config/drivers.yaml
@@ -21,6 +21,10 @@
   :name: Rackspace
 :azure: 
   :name: Azure
+:eucalyptus:
+  :name: Eucalyptus
+  :username: Access Key ID
+  :password: Secret Access Key
 :ec2: 
   :entrypoints: 
     s3: 
