Removed Brno lab URL for RHEV-M driver
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1086949 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/config/drivers.yaml
+++ b/server/config/drivers.yaml
@@ -7,7 +7,7 @@
   :name: RHEVM
   :entrypoints:
     default:
-      default: "https://rhev-dc.lab.eng.brq.redhat.com:8443/rhevm-api-powershell"
+      default: "https://rhev-m.localhost:8443/rhevm-api-powershell"
 :rimuhosting: 
   :name: RimuHosting
 :opennebula: 
