Added basic RackSpace unit tests
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1087211 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -28,12 +28,26 @@ begin
 rescue LoadError
 end
 
-desc "Run basic unit tests"
-Rake::TestTask.new("test") { |t|
-  t.test_files = FileList.new('tests/**/*_test.rb')
-  t.verbose = true
-  t.warning = false
-}
+namespace :test do
+
+  desc "Run mock unit tests"
+  Rake::TestTask.new("mock") { |t|
+    t.test_files = FileList.new('tests/drivers/mock/*_test.rb') + FileList.new('tests/rabbit_test.rb')
+    t.options = "-v -v"
+    t.verbose = true
+    t.warning = false
+  }
+
+  desc "Run rackspace unit tests"
+  Rake::TestTask.new("rackspace") { |t|
+    t.test_files = ['tests/common.rb', 'tests/drivers/rackspace/setup.rb'] + FileList.new('tests/drivers/rackspace/*_test.rb')
+    t.options = "-v -v"
+    t.verbose = true
+    t.warning = false
+  }
+
+
+end
 
 begin
   require 'yard'
