--- a/server/Rakefile
+++ b/server/Rakefile
@@ -28,26 +28,12 @@ begin
 rescue LoadError
 end
 
-namespace :test do
-
-  desc "Run mock unit tests"
-  Rake::TestTask.new("mock") { |t|
-    t.test_files = FileList.new('tests/drivers/mock/*_test.rb') + FileList.new('tests/rabbit_test.rb')
-    t.options = "-v -v"
-    t.verbose = true
-    t.warning = false
-  }
-
-  desc "Run rackspace unit tests"
-  Rake::TestTask.new("rackspace") { |t|
-    t.test_files = ['tests/common.rb', 'tests/drivers/rackspace/setup.rb'] + FileList.new('tests/drivers/rackspace/*_test.rb')
-    t.options = "-v -v"
-    t.verbose = true
-    t.warning = false
-  }
-
-
-end
+desc "Run basic unit tests"
+Rake::TestTask.new("test") { |t|
+  t.test_files = FileList.new('tests/**/*_test.rb')
+  t.verbose = true
+  t.warning = false
+}
 
 begin
   require 'yard'
