Added VCR gem to recort Test::Unit
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1089371 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -32,7 +32,7 @@ namespace :test do
 
   desc "Run mock unit tests"
   Rake::TestTask.new("mock") { |t|
-    t.test_files = FileList.new('tests/drivers/mock/*_test.rb') + FileList.new('tests/rabbit_test.rb')
+    t.test_files = ['tests/common.rb', 'tests/drivers/mock/setup.rb'] + FileList.new('tests/drivers/mock/*_test.rb') + FileList.new('tests/rabbit_test.rb')
     t.options = "-v -v"
     t.verbose = true
     t.warning = false
