Added RHEV-M unit tests
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1090287 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -46,6 +46,14 @@ namespace :test do
     t.warning = false
   }
 
+  desc "Run rackspace unit tests"
+  Rake::TestTask.new("rhevm") { |t|
+    t.test_files = [ 'tests/common.rb', 'tests/drivers/rhevm/setup.rb' ] + FileList.new('tests/drivers/rhevm/*_test.rb')
+    t.options = "-v -v"
+    t.verbose = true
+    t.warning = false
+  }
+
 
 end
 
