Added rest-client dependency to Gemfile (RHEVM)
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1090378 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -34,6 +34,10 @@ group :rackspace do
   gem 'cloudfiles'
 end
 
+group :rhevm do
+  gem 'rest-client'
+end
+
 group :test do
   gem 'ruby-debug', :platforms => :mri_18
   gem 'ruby-debug19', :platforms => :mri_19, :require => 'ruby-debug'
