Eucalyptus: add driver to documentation
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1090467 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/config/drivers.yaml
+++ b/server/config/drivers.yaml
@@ -25,6 +25,9 @@
   :name: Eucalyptus
   :username: Access Key ID
   :password: Secret Access Key
+  :entrypoints:
+    default:
+      default: "ec2=EUCALYPTUS_IP[:PORT];s3=WALRUS_IP[:PORT]"
 :ec2: 
   :entrypoints: 
     s3: 
