Change version to 0.3.0 and tweak RPM specs
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1090492 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -84,7 +84,7 @@ task :install, [:install_dir, :bin_dir] do |t, args|
     Dir["views/**/**"],
     "config.ru",
     "COPYING",
-    "README",
+    "README.md",
     "*.rb"
   ]
 
