Fixes from review of rc1 for version 0.3.0
  - move NOTICE files to server/ and client/ dir and include in artifacts
  - generate md5 and sha1 hashes for each artifact individually
  - rename COPYING to LICENSE in server/ and client/ dir
  - include DISCLAIMER in server/ and client/
  - adjust gem and rpm spec files

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1090493 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -83,7 +83,9 @@ task :install, [:install_dir, :bin_dir] do |t, args|
     Dir["public/**/**"],
     Dir["views/**/**"],
     "config.ru",
-    "COPYING",
+    "LICENSE",
+    "DISCLAIMER",
+    "NOTICE",
     "README.md",
     "*.rb"
   ]
