--- a/clients/java/org.jboss.tools.deltacloud.client/.settings/org.eclipse.jdt.core.prefs
+++ b/clients/java/org.jboss.tools.deltacloud.client/.settings/org.eclipse.jdt.core.prefs
@@ -1,8 +1,6 @@
-#Fri Feb 25 03:56:42 GMT+08:00 2011
+#Mon May 23 11:32:52 CEST 2011
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
 org.eclipse.jdt.core.compiler.compliance=1.6
-org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
-org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
+org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
 org.eclipse.jdt.core.compiler.source=1.6
