Initial VSphere driver support for Deltacloud API
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1137599 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/config/drivers.yaml
+++ b/server/config/drivers.yaml
@@ -46,3 +46,10 @@
       eu-west-1: ec2.eu-west-1.amazonaws.com
       us-east-1: ec2.us-east-1.amazonaws.com
   :name: EC2
+:vsphere:
+  :name: VSphere
+  :username: Login Name
+  :password: Password
+  :entrypoints:
+    default:
+      default: "https://vsphere.provider.com/sdk"
