Client: fix Gem.available? deprecation warning
Gem.available? was deprecated by RubyGems 1.8 in favour of
the recently introducted Gem::Specification.find_by_name.

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1159109 13f79535-47bb-0310-9956-ffa450edef68

--- a/client/Rakefile
+++ b/client/Rakefile
@@ -32,7 +32,15 @@ Gem::PackageTask.new(spec) do |pkg|
   pkg.need_tar = true
 end
 
-if Gem.available?('rspec')
+def available?(name)
+  Gem::Specification.find_by_name(name)
+rescue Gem::LoadError
+  false
+rescue
+  Gem.available?(name)
+end
+
+if available?('rspec')
   require 'spec/rake/spectask'
   desc "Run all examples"
   Spec::Rake::SpecTask.new('spec') do |t|
