Added rake task to print all Rabbit routes
Signed-off-by: Michal fojtik <mfojtik@redhat.com>

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1160848 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -91,6 +91,14 @@ Gem::PackageTask.new(spec) do |pkg|
   pkg.need_tar = true
 end
 
+desc "List all REST routes defined through Rabbit"
+task :routes do
+  require 'server.rb'
+  Sinatra::Rabbit::routes.each do |m, path|
+    puts sprintf("\033[1;30m%-8s\033[0m %s", m.to_s.upcase, path)
+  end
+end
+
 namespace :mock do
   namespace :fixtures do
     desc "Setup Mock driver fixtures"
