mock driver: split into driver and client
This rewrite takes care of a number of issues with the driver (e.g., newly
created blobs would not show up in the bucket), and cleans up the code so
that it hopefully becomes clearer what driver writers need to do.

The driver now also uses the objects stored in the file system verbatim,
instead of modifying loaded objects on read.

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1160852 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/lib/deltacloud/drivers/mock/data/blobs/blob2.yml
+++ b/server/lib/deltacloud/drivers/mock/data/blobs/blob2.yml
@@ -1,8 +1,10 @@
---- 
-:user_metadata: 
-  VERSION: "1.2"
-:content_type: text/html
+---
 :content_length: 56
-:bucket: bucket1
+:content_type: text/html
 :last_modified: 2010-09-23 16:55:05 +0100
 :content: <html><head></head><body>content of blob 2</body></html>
+:name: blob2
+:user_metadata:
+  VERSION: "1.2"
+:bucket: bucket1
+:id: blob2
