--- a/server/lib/deltacloud/drivers/mock/data/blobs/blob5.yml
+++ b/server/lib/deltacloud/drivers/mock/data/blobs/blob5.yml
@@ -1,7 +1,9 @@
-:bucket: bucket2
+---
 :content_length: 17
 :content_type: application/pdf
 :last_modified: 2009-07-21 11:12:13 +0100
-:content:
-    content of blob 5
-:user_metadata: ''
+:content: content of blob 5
+:name: blob5
+:user_metadata: ""
+:id: blob5
+:bucket: bucket2
