--- a/server/lib/deltacloud/drivers/mock/data/storage_volumes/vol2.yml
+++ b/server/lib/deltacloud/drivers/mock/data/storage_volumes/vol2.yml
@@ -1,7 +1,8 @@
-:owner_id: mockuser
+---
 :realm_id: us
-:created: Thu Jul 30 14:35:11 UTC 2009
-:state: AVAILABLE
 :capacity: 1
 :device:
+:created: Thu Jul 30 14:35:11 UTC 2009
 :instance_id:
+:id: vol2
+:state: AVAILABLE
