--- a/server/config/drivers/ec2.yaml
+++ b/server/config/drivers/ec2.yaml
@@ -4,16 +4,19 @@
     s3:
       us-west-1: s3-us-west-1.amazonaws.com
       ap-southeast-1: s3-ap-southeast-1.amazonaws.com
+      ap-northeast-1: s3-ap-northeast-1.amazonaws.com
       eu-west-1: s3-eu-west-1.amazonaws.com
       us-east-1: s3.amazonaws.com
     elb:
       us-west-1: elasticloadbalancing.us-west-1.amazonaws.com
       ap-southeast-1: elasticloadbalancing.ap-southeast-1.amazonaws.com
+      ap-northeast-1: elasticloadbalancing.ap-northeast-1.amazonaws.com
       eu-west-1: elasticloadbalancing.eu-west-1.amazonaws.com
       us-east-1: elasticloadbalancing.us-east-1.amazonaws.com
     ec2:
       us-west-1: ec2.us-west-1.amazonaws.com
       ap-southeast-1: ec2.ap-southeast-1.amazonaws.com
+      ap-northeast-1: ec2.ap-northeast-1.amazonaws.com
       eu-west-1: ec2.eu-west-1.amazonaws.com
       us-east-1: ec2.us-east-1.amazonaws.com
   :name: EC2
