Alternative server frontend, exposing the DMTF CIMI API
The API is currently still under development. The implementation is based
on the work-in-progress report at http://dmtf.org/standards/cloud

The implementation is far from complete; thisis a starting point.

Signed-off-by: Tong Li <litong01@us.ibm.com>

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1185284 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -26,6 +26,9 @@ begin
 rescue LoadError
 end
 
+$top_srcdir = File.dirname(__FILE__)
+$:.unshift File.join($top_srcdir, 'lib')
+
 begin
   require 'cucumber'
   require 'cucumber/rake/task'
@@ -91,13 +94,24 @@ Gem::PackageTask.new(spec) do |pkg|
   pkg.need_tar = true
 end
 
-desc "List all REST routes defined through Rabbit"
-task :routes do
-  require 'server.rb'
-  Sinatra::Rabbit::routes.each do |m, path|
-    puts sprintf("\033[1;30m%-8s\033[0m %s", m.to_s.upcase, path)
+namespace :routes do
+  desc "List all REST routes for the Deltacloud API"
+  task :api do
+    require 'deltacloud/server.rb'
+    Sinatra::Rabbit::routes.each do |m, path|
+      puts sprintf("\033[1;30m%-8s\033[0m %s", m.to_s.upcase, path)
+    end
+  end
+
+  desc "List all REST routes for the CIMI API"
+  task :cimi do
+    require 'cimi/server.rb'
+    Sinatra::Rabbit::routes.each do |m, path|
+      puts sprintf("\033[1;30m%-8s\033[0m %s", m.to_s.upcase, path)
+    end
   end
 end
+
 
 namespace :mock do
   namespace :fixtures do
