CIMI: model layer
A way to describe the schema of CIMI objects so that we can serialize to
and from XML

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1201590 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -20,6 +20,7 @@
 require 'rake'
 require 'rake/testtask'
 require 'rubygems/package_task'
+require 'spec/rake/spectask'
 
 begin
   require 'ci/reporter/rake/test_unit'
@@ -87,6 +88,10 @@ task :cucumber do
    Rake::Task["cucumber:#{driver}:test"].reenable
    Rake::Task["cucumber:#{driver}:test"].invoke
   end
+end
+
+Spec::Rake::SpecTask.new('spec') do |t|
+  t.spec_files = FileList['spec/**/*_spec.rb']
 end
 
 begin
