--- a/server/Rakefile
+++ b/server/Rakefile
@@ -20,7 +20,7 @@
 require 'rake'
 require 'rake/testtask'
 require 'rubygems/package_task'
-require 'spec/rake/spectask'
+require 'rspec/core/rake_task'
 
 begin
   require 'ci/reporter/rake/test_unit'
@@ -90,8 +90,9 @@ task :cucumber do
   end
 end
 
-Spec::Rake::SpecTask.new('spec') do |t|
-  t.spec_files = FileList['spec/**/*_spec.rb']
+RSpec::Core::RakeTask.new do |t|
+  t.pattern = FileList['spec/**/*_spec.rb']
+  t.rspec_opts = [ "--format", "nested", "--color", "-r ./spec/spec_helper.rb"]
 end
 
 begin
