--- a/server/spec/cimi/data/machine_configuration.json
+++ b/server/spec/cimi/data/machine_configuration.json
@@ -8,7 +8,7 @@
   "disks" : [
     { "capacity": { "quantity": "1", "units": "terabyte", "format": "ext4", "attachmentPoint": "/" } }
   ],
-  "properties": [ { "name": "architectore", "value" : "i386" } ],
+  "properties": [ { "architectore": "i386" } ],
   "operations": [
     { "rel": "edit",
       "href": "http://cimi.example.org/machine_images/1/edit" },
