CIMI: Removed attachmentPoint and format from capacity in disk for MachineConfiguration model
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1203326 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/spec/cimi/data/machine_configuration.json
+++ b/server/spec/cimi/data/machine_configuration.json
@@ -6,7 +6,7 @@
   "cpu": "2",
   "memory" : { "quantity": "1", "units": "gigabyte" },
   "disks" : [
-    { "capacity": { "quantity": "1", "units": "terabyte", "format": "ext4", "attachmentPoint": "/" } }
+    { "capacity": { "quantity": "1", "units": "terabyte" } }
   ],
   "properties": [ { "architectore": "i386" } ],
   "operations": [
