--- a/server/Gemfile
+++ b/server/Gemfile
@@ -12,6 +12,6 @@ group :development do
   gem "ci_reporter"
   gem "cucumber", ">= 0.6.3"
   gem "rcov", ">= 0.9.8"
-  gem "rspec", "< 2.0.0"
+  gem "rspec", "~> 2.0.0"
 end
 
