CIMI: Added possibility to run single spec for specified model in Rakefile
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1203692 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -95,6 +95,15 @@ RSpec::Core::RakeTask.new do |t|
   t.rspec_opts = [ "--format", "nested", "--color", "-r ./spec/spec_helper.rb"]
 end
 
+Dir['spec/**/*_spec.rb'].each do |file|
+  RSpec::Core::RakeTask.new("spec:#{File.basename(file).gsub(/_spec\.rb$/, '')}") do |t|
+    t.pattern = FileList[file]
+    t.rspec_opts = [ "--format", "nested", "--color", "-r ./spec/spec_helper.rb"]
+  end
+end
+
+
+
 begin
   require 'yard'
   YARD::Rake::YardocTask.new do |t|
