CIMI: Fixed properties syntax for JSON to be Hash
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1203694 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/spec/cimi/data/machine_configuration.json
+++ b/server/spec/cimi/data/machine_configuration.json
@@ -8,7 +8,7 @@
   "disks" : [
     { "capacity": { "quantity": "1", "units": "terabyte" } }
   ],
-  "properties": [ { "architectore": "i386" } ],
+  "properties": { "architecture": "i386" },
   "operations": [
     { "rel": "edit",
       "href": "http://cimi.example.org/machine_configurations/1/edit" },
