--- a/server/Gemfile
+++ b/server/Gemfile
@@ -3,8 +3,6 @@ source "http://rubygems.org"
 gemspec
 
 group :development do
-  gem 'ruby-debug', :platforms => :mri_18
-  gem 'ruby-debug19', :platforms => :mri_19, :require => 'ruby-debug'
   gem "compass", ">= 0.8.17"
   gem "vcr"
   gem "webmock"
@@ -12,6 +10,6 @@ group :development do
   gem "ci_reporter"
   gem "cucumber", ">= 0.6.3"
   gem "rcov", ">= 0.9.8"
-  gem "rspec", "~> 2.0.0"
+  gem "rspec", ">= 2.0.0"
 end
 
