CIMI: Added Cucumber feature for Machine model
git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1207043 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -50,6 +50,12 @@ begin
       end
     end
   end
+  namespace :cimi do
+    Cucumber::Rake::Task.new(:machines) do |t|
+      t.cucumber_opts = "tests/cimi/features/machines.feature --format pretty"
+      t.rcov = false
+    end
+  end
 rescue LoadError
 end
 
