CIMI: Added Cucumber features for MachineImage
git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1207788 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -55,6 +55,10 @@ begin
       t.cucumber_opts = "tests/cimi/features/machines.feature --format pretty"
       t.rcov = false
     end
+    Cucumber::Rake::Task.new(:machine_images) do |t|
+      t.cucumber_opts = "tests/cimi/features/machine_images.feature --format pretty"
+      t.rcov = false
+    end
   end
 rescue LoadError
 end
