CIMI: Added posibility to run all CIMI scenarios at once by invoking 'rake cimi'
git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1207918 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -50,6 +50,10 @@ begin
       end
     end
   end
+  Cucumber::Rake::Task.new(:cimi) do |t|
+    t.cucumber_opts = "tests/cimi/features/*.feature --format pretty"
+    t.rcov = false
+  end
   namespace :cimi do
     Cucumber::Rake::Task.new(:machines) do |t|
       t.cucumber_opts = "tests/cimi/features/machines.feature --format pretty"
