--- a/clients/cimi/Gemfile
+++ b/clients/cimi/Gemfile
@@ -4,6 +4,7 @@ gem 'sinatra'
 gem 'sinatra-content-for'
 gem 'rack-accept'
 gem 'haml'
-gem 'rest-client'
 gem 'json'
-gem 'xmlsimple'
+#gem 'xmlsimple'
+gem 'rest-client'
+gem 'nokogiri'
