Adds cucumber scenario and steps for CIMI::Volumes
git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1214357 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -63,6 +63,10 @@ begin
       t.cucumber_opts = "tests/cimi/features/machine_images.feature --format pretty"
       t.rcov = false
     end
+    Cucumber::Rake::Task.new(:volumes) do |t|
+      t.cucumber_opts = "tests/cimi/features/volumes.feature --format pretty"
+      t.rcov = false
+   end
   end
 rescue LoadError
 end
