--- a/server/config/drivers/ec2.yaml
+++ b/server/config/drivers/ec2.yaml
@@ -25,4 +25,12 @@
       eu-west-1: ec2.eu-west-1.amazonaws.com
       us-east-1: ec2.us-east-1.amazonaws.com
       sa-east-1: ec2.sa-east-1.amazonaws.com
+    mon:
+      us-west-1: monitoring.us-west-1.amazonaws.com
+      us-west-2: monitoring.us-west-2.amazonaws.com
+      ap-southeast-1: monitoring.ap-southeast-1.amazonaws.com
+      ap-northeast-1: monitoring.ap-northeast-1.amazonaws.com
+      eu-west-1: monitoring.eu-west-1.amazonaws.com
+      us-east-1: monitoring.us-east-1.amazonaws.com
+      sa-east-1: monitoring.sa-east-1.amazonaws.com
   :name: EC2
