CIMI: Removed *.feature from Rakefile when launching cimi Cucumber tests
Signed-off-by: Michal fojtik <mfojtik@redhat.com>

git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1234793 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -51,7 +51,7 @@ begin
     end
   end
   Cucumber::Rake::Task.new(:cimi) do |t|
-    t.cucumber_opts = "tests/cimi/features/*.feature --format pretty"
+    t.cucumber_opts = "tests/cimi/features --format pretty"
     t.rcov = false
   end
   namespace :cimi do
