Client: Updated rspec in client to 2.0
git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1235277 13f79535-47bb-0310-9956-ffa450edef68

--- a/client/Rakefile
+++ b/client/Rakefile
@@ -41,10 +41,11 @@ rescue
 end
 
 if available?('rspec')
-  require 'spec/rake/spectask'
+  require 'rspec/core/rake_task'
   desc "Run all examples"
-  Spec::Rake::SpecTask.new('spec') do |t|
-    t.spec_files = FileList['specs/**/*_spec.rb']
+  RSpec::Core::RakeTask.new('spec') do |t|
+    t.pattern = FileList['specs/**/*_spec.rb']
+    t.rspec_opts = [ "--format", "nested", "--color"]
   end
 end
 
